--- a/kayak-app/src/components/homePage/HomePage.css
+++ b/kayak-app/src/components/homePage/HomePage.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     padding: 0;
     margin: 0;
 }
@@ -30,6 +31,7 @@ html, body {
 .homepage-root .header-container h3 {
     color: var(--yellow);
     margin: 0;
+    margin-bottom: 1em;
     z-index: 2;
 }
 
@@ -43,6 +45,7 @@ html, body {
     padding: 1em;
     width: fit-content;
     margin: auto;
+    margin-bottom: 1em;
 
     background-color: var(--yellow);
     color: var(--blue);
@@ -59,4 +62,120 @@ html, body {
     color: var(--yellow);
     background-color: var(--blue);
     border: solid var(--yellow) 2px;
+}
+
+.homepage-root .product-categories-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1em;
+
+    max-width: 1150px;
+    margin: auto;
+
+    border-radius: 10px;
+    overflow: hidden;
+
+}
+
+.product-categories-container .category {
+    position: absolute;
+    z-index: 10;
+    margin: 38% 25%;
+    padding: .15em;
+
+    background-color: rgb(41, 168, 164, .7);
+    border-radius: 10%;
+    font-weight: bold;
+
+    /* 
+    --blue: rgb(41, 168, 164);
+    --yellow: rgb(249, 193, 108); */
+
+    overflow: hidden;
+    /* justify-content: space-evenly; */
+
+    flex: 1 1 200px;
+
+    text-align: center;
+
+    transition: all .1s ease-in-out;
+}
+
+.product-categories-container .image-container {
+    /* display: flex;
+    justify-content: center;
+    text-align: center;
+
+    margin: auto;
+    height: 100%;
+    max-height: 11em;
+    width: 100%;
+    max-width: 11em; */
+
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    overflow: hidden;
+    margin: auto;
+    height: 8em;
+    width: 8em;
+
+    border-radius: 10px;
+    overflow: hidden;
+
+
+}
+
+.product-categories-container img {
+    /* object-fit: cover;
+    overflow: hidden;
+
+    margin: auto;
+    height: auto;
+    max-height: 100%;
+    width: fit-content;
+    max-width: 100%; */
+
+    display: block;
+    overflow: hidden;
+
+    margin: auto;
+    height: 100%;
+    width: fit-content;
+    max-width: 100%;
+}
+
+.product-categories-container a {
+    position: relative;
+    text-decoration: none;
+    color: white;
+    border: solid var(--blue) 2px;
+
+    min-width: 6em;
+    max-width: 100%;
+
+    min-height: 6em;
+    max-height: 100%;
+
+
+
+
+}
+
+.product-categories-container a:hover {
+    color: var(--yellow);
+    border: solid var(--yellow) 2px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.product-categories-container a:hover .category {
+    background-color: rgb(255, 255, 255, .7);
+    color: black;
+}
+
+.product-categories-container a:hover img {
+    filter: blur(3px) ;
 }
