--- a/kayak-app/src/components/orders/OrderSuccess.css
+++ b/kayak-app/src/components/orders/OrderSuccess.css
@@ -36,7 +36,7 @@
 
     width: 100%;
     margin-bottom: 0;
-    padding: 0 1em;
+    padding: 0 10%;
 }
 
 .order-detail-root .order-display .order-data-root {
